<resources>
    <string name="app_name">AQI app</string>
    <string name="saved_location_title">Saved locations</string>
    <string name="pollutants_title">Pollutants</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="splash_image_content_description">air quality index app</string>

    <!-- welcome screen -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Know your Air!</string>
    <string name="slide_1_desc">Get daily updates on your Location\'s Air Quality</string>

    <string name="slide_2_title">Save favourite locations</string>
    <string name="slide_2_desc">Add multiple locations to your list and get their air quality data</string>

    <string name="slide_3_title">Learn more !</string>
    <string name="slide_3_desc">Learn more about pollutants and how they affect you</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- Home fragment -->
    <string name="current_location">Current Location</string>
    <string name="location_null_error">Error getting location data!</string>

    <!-- Bottom nav bar -->
    <string name="title_home">Home</string>
    <string name="title_saved_locations">Locations</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="about_app_data">Resources</string>
    <string name="about_pollutants">Pollutants</string>

    <!-- Location fragment -->
    <string name="aqi_color_guide" translatable="false">https://webcam.srs.fs.fed.us/test/AQI.shtml</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- About Pollutants -->
    <string name="pollutant_co_name" translatable="false">CO</string>
    <string name="pollutant_co_subtitle">Carbon Monoxide</string>
    <string name="pollutant_co_description">CO is an odorless, colorless gas formed by incomplete combustion of carbon in fuel. The main source is motor vehicle exhaust, along with industrial processes and biomass burning. Carbon monoxide binds to hemoglobin in red blood cells, reducing their ability to transport and release oxygen throughout the body. Low exposures can aggravate cardiac ailments, while high exposures cause central nervous system impairment or death. It also plays a role in the generation of ground-level ozone.</string>
    <string name="pollutant_co_details_link" translatable="false">https://www.environment.gov.au/protection/publications/factsheet-carbon-monoxide-co</string>

    <string name="pollutant_no2_name" translatable="false">NOx</string>
    <string name="pollutant_no2_subtitle">Nitrogen Oxides</string>
    <string name="pollutant_no2_description">NOx are highly reactive gases formed when oxygen and nitrogen react at high temperatures during combustion or lightning strikes. Nitrogen present in fuel can also be emitted as NOx during combustion. Emissions are dominated by fossil fuel combustion at northern mid-latitudes and by biomass burning in the tropics.\nIn the atmosphere NOx reacts with volatile organic compounds (VOCs) and carbon monoxide to produce ground-level ozone through a complicated chain reaction mechanism. It is eventually oxidized to nitric acid (HNO3). Like sulfuric acid, nitric acid contributes to acid deposition and to aerosol formation.</string>
    <string name="pollutant_no2_details_link" translatable="false">https://www.environment.gov.au/protection/publications/factsheet-nitrogen-dioxide-no2</string>

    <string name="pollutant_o3_name" translatable="false">O3</string>
    <string name="pollutant_o3_subtitle">Ozone</string>
    <string name="pollutant_o3_description">Ground level or "bad" ozone is not emitted directly into the air, but is created by chemical reactions between oxides of nitrogen (NOx) and volatile organic compounds (VOC) in the presence of sunlight. Emissions from industrial facilities and electric utilities, motor vehicle exhaust, gasoline vapors, and chemical solvents are some of the major sources of NOx and VOC. Breathing ozone can trigger a variety of health problems, particularly for children, the elderly, and people of all ages who have lung diseases such as asthma. Ground level ozone can also have harmful effects on sensitive vegetation and ecosystems.</string>
    <string name="pollutant_o3_details_link" translatable="false">https://www.environment.gov.au/protection/publications/factsheet-ground-level-ozone-o3</string>

    <string name="pollutant_pm_name" translatable="false">Pm</string>
    <string name="pollutant_pm_subtitle">Particulate matter</string>
    <string name="pollutant_pm_description">Coarse dust particles (PM10) are 2.5 to 10 micrometers in diameter. Sources include crushing or grinding operations and dust stirred up by vehicles on roads. These tiny particles which are about 30 times smaller than the width of a hair on your head are small enough to get inhaled past our defensive nose hairs and into our lungs.</string>
    <string name="pollutant_pm_details_link" translatable="false">https://www.environment.gov.au/resource/particles</string>

    <string name="pollutant_so2_name" translatable="false">SO2</string>
    <string name="pollutant_so2_subtitle">Sulphur dioxide</string>
    <string name="pollutant_so2_description">SO2 is a gas formed when sulfur is exposed to oxygen at high temperatures during fossil fuel combustion, oil refining, or metal smelting. SO2 is toxic at high concentrations, but its principal air pollution effects are associated with the formation of acid rain and aerosols.\nSO2 dissolves in cloud droplets and oxidizes to form sulfuric acid (H2SO4), which can fall to Earth as acid rain or snow or form sulfate aerosol particles in the atmosphere.</string>
    <string name="pollutant_so2_details_link" translatable="false">https://www.environment.gov.au/protection/publications/factsheet-sulfur-dioxide-so2</string>

    <string name="save_earth_title">Save Earth</string>
    <string name="save_earth_description">Every year people all over celebrate World Environment Day, with plans in mind to save earth and the environment. But sometimes we need to ask ourselves “will we really execute our plans?” The existence of nature is the proof of our own existence and everybody appreciates the existence of water, forest, animals, songbird, flora, and fauna, but unfortunately, these can be misused and end up being harmed. The environment is polluted by various things such as radioactive elements, plastics, sewage, domestic waste and industrial pollution.</string>
    <string name="reduce_air_pollution_link" translatable="false">https://www.wikihow.com/Take-Action-to-Reduce-Air-Pollution</string>
    <string name="about_air_pollution_nat_geo_link" translatable="false">https://www.nationalgeographic.com/environment/global-warming/pollution/</string>

    <string name="open_details_of_pollutant">Open details</string>
    <string name="more_details">More Details</string>
    <string name="main_menu_about_location">About Location</string>

    <!-- Error messages -->
    <string name="error_getting_data">Error getting place data</string>
    <string name="location_permission_denied">Permission denied to access location</string>
    <string name="network_data_null">Error getting data from internet</string>
    <string name="widget_no_home_location">No Saved Home Location</string>
    <string name="no_saved_locations_empty_state">No Saved Locations</string>
    <string name="no_location_marked_as_home_empty_state">No Location Marked as home</string>
    <string name="error_getting_place_info">Error getting place info</string>

    <string name="dominant_pollutant">Dominant pollutant : %s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_empty_text">Your home location data will be shown here</string>
    <string name="widget_text_air_quality">Air Quality</string>

    <!-- add location dialog box -->
    <string name="dialog_title">Add Location</string>
    <string name="dialog_subtitle">Enter name of the new location</string>
    <string name="dialog_positive_button">OK</string>
    <string name="home_location_saved">Home location set to \"%s\"</string>

    <string name="custom_tab_color" translatable="false">#2196F3</string>

</resources>
