<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_round_home"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_list_places"
        android:icon="@drawable/ic_round_view_list"
        android:title="@string/title_dashboard"
        />

    <item
        android:id="@+id/navigation_about_pollutants"
        android:icon="@drawable/ic_round_pollutants"
        android:title="@string/about_pollutants"
        />

    <item
        android:id="@+id/navigation_about"
        android:title="@string/about_app_data"
        android:icon="@drawable/ic_round_info" />

</menu>
